--- a/docs-mintlify/guides/integrations.mdx
+++ b/docs-mintlify/guides/integrations.mdx
@@ -14,8 +14,10 @@ Use ACPAgent When:
 - You're developing a multi-agent system where agents communicate via ACP
 - You're integrating with a third-party ACP-compliant service that isn't the BeeAI Platform
 
+<CodeGroup>
+
 {/* <!-- embedme python/examples/agents/providers/acp.py --> */}
-```py
+```py Python
 import asyncio
 import sys
 import traceback
@@ -48,15 +50,66 @@ if __name__ == "__main__":
         sys.exit(e.explain())
 ```
 
+{/* <!-- embedme typescript/examples/agents/providers/acp.ts --> */}
+```ts TypeScript
+import "dotenv/config.js";
+import { ACPAgent } from "beeai-framework/adapters/acp/agents/agent";
+import { createConsoleReader } from "examples/helpers/io.js";
+import { FrameworkError } from "beeai-framework/errors";
+import { TokenMemory } from "beeai-framework/memory/tokenMemory";
+
+const agentName = "chat";
+
+const agent = new ACPAgent({
+  url: "http://127.0.0.1:8000",
+  agentName,
+  memory: new TokenMemory(),
+});
+
+const reader = createConsoleReader();
+
+try {
+  for await (const { prompt } of reader) {
+    const result = await agent.run({ input: prompt }).observe((emitter) => {
+      emitter.on("update", (data) => {
+        reader.write(`Agent (received progress) 🤖 : `, JSON.stringify(data.value, null, 2));
+      });
+      emitter.on("error", (data) => {
+        reader.write(`Agent (error) 🤖 : `, data.message);
+      });
+    });
+
+    reader.write(`Agent (${agentName}) 🤖 : `, result.result.text);
+  }
+} catch (error) {
+  reader.write("Agent (error)  🤖", FrameworkError.ensure(error).dump());
+}
+```
+
+</CodeGroup>
+
 The availability of ACP agents depends on the server you're connecting to. You can check which agents are available by using the check_agent_exists method:
 
-```py
+<CodeGroup>
+
+```py Python
 try:
     await agent.check_agent_exists()
     print("Agent exists and is available")
 except AgentError as e:
     print(f"Agent not available: {e.message}")
 ```
+
+```ts TypeScript
+try {
+  await agent.checkAgentExists();
+  console.log("Agent exists and is available");
+} catch (e) {
+  console.error("Agent not available: {e.message}");
+}
+```
+
+</CodeGroup>
 
 If you need to create your own ACP server with custom agents, BeeAI framework provides the AcpServer class.
 
@@ -208,8 +261,10 @@ Use BeeAIPlatformAgent When:
 - You're connecting specifically to the BeeAI Platform services.
 - You want forward compatibility for the BeeAI Platform, no matter which protocol it is based on.
 
+<CodeGroup>
+
 {/* <!-- embedme python/examples/providers/beeai_platform.py --> */}
-```py
+```py Python
 import asyncio
 import sys
 import traceback
@@ -242,6 +297,44 @@ if __name__ == "__main__":
         sys.exit(e.explain())
 
 ```
+
+{/* <!-- embedme typescript/examples/agents/providers/beeai_platform.ts --> */}
+```ts TypeScript
+import "dotenv/config.js";
+import { BeeAIPlatformAgent } from "beeai-framework/adapters/beeai_platform/agents/agent";
+import { createConsoleReader } from "examples/helpers/io.js";
+import { FrameworkError } from "beeai-framework/errors";
+import { TokenMemory } from "beeai-framework/memory/tokenMemory";
+
+const agentName = "chat";
+
+const instance = new BeeAIPlatformAgent({
+  url: "http://127.0.0.1:8333/api/v1/acp",
+  agentName,
+  memory: new TokenMemory(),
+});
+
+const reader = createConsoleReader();
+
+try {
+  for await (const { prompt } of reader) {
+    const result = await instance.run({ input: prompt }).observe((emitter) => {
+      emitter.on("update", (data) => {
+        reader.write(`Agent (received progress) 🤖 : `, JSON.stringify(data.value, null, 2));
+      });
+      emitter.on("error", (data) => {
+        reader.write(`Agent (error) 🤖 : `, data.message);
+      });
+    });
+
+    reader.write(`Agent (${agentName}) 🤖 : `, result.result.text);
+  }
+} catch (error) {
+  reader.write("Agent (error)  🤖", FrameworkError.ensure(error).dump());
+}
+```
+
+</CodeGroup>
 
 ### BeeAI Platform Server
 
@@ -280,7 +373,7 @@ if __name__ == "__main__":
 
 ### MCP Tool
 
-MCPTool allows you to consume external tools exposed via MCP protocol. See the [MCP tool documentation](/python/docs/tools.md#mcp-tool) for more information.
+MCPTool allows you to consume external tools exposed via MCP protocol. See the [MCP tool documentation](/modules/tools#mcp-tool) for more information.
  
 ### MCP Server
 
