docs: update pages, add deprecation warning (#863)
Ref: #861
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/docs-mintlify/guides/mcp-slackbot.mdx
+++ b/docs-mintlify/guides/mcp-slackbot.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Slack Integration"
+title: "MCP Slackbot"
 icon: "slack"
 ---
 
-## Creating Slack Bot Agent with BeeAI and MCP
+## Creating Slack Bot Agent with BeeAI Framework and MCP
 
 This tutorial guides you through creating an AI agent that can post messages to a Slack channel using the Model Context Protocol (MCP).
 
