--- a/docs-mintlify/introduction/quickstart.mdx
+++ b/docs-mintlify/introduction/quickstart.mdx
@@ -11,12 +11,12 @@ icon: "rocket"
   for [Python](https://github.com/i-am-bee/beeai-framework-py-starter) or [Typescript](https://github.com/i-am-bee/beeai-framework-ts-starter).
 
   <CodeGroup>
-  ```shell Python
+  ```bash Python
   git clone https://github.com/i-am-bee/beeai-framework-py-starter.git
   cd beeai-framework-py-starter
   ```
 
-  ```shell TypeScript
+  ```bash TypeScript
   git clone https://github.com/i-am-bee/beeai-framework-ts-starter.git
   cd beeai-framework-ts-starter
   nvm install && nvm use
@@ -30,15 +30,15 @@ icon: "rocket"
    <Step title="Install BeeAI framework">
 
   <CodeGroup>
-    
-  ```py Python
+
+  ```bash Python
   pip install beeai-framework
   ```
 
-  ```ts TypeScript
+  ```bash TypeScript
   npm install beeai-framework
   ```
-  
+
   </CodeGroup>
 
    </Step>
@@ -209,15 +209,15 @@ icon: "rocket"
    <Step title="Run the example">
 
   <CodeGroup>
-    
+
   ```py Python
   python quickstart.py
   ```
-  
+
   ```ts TypeScript
   npm exec tsx quickstart.ts
   ```
-  
+
   </CodeGroup>
 
    </Step>
