--- a/docs-mintlify/modules/serialization.mdx
+++ b/docs-mintlify/modules/serialization.mdx
@@ -230,10 +230,10 @@ console.info(memory.messages);
 ## Examples
 
 <CardGroup cols={2}>
-  <Card title="Python" icon="python" href="https://github.com/i-am-bee/beeai-framework/tree/main/python/examples/serialization">
-    COMING SOON: Explore reference serialization implementations in Python
-  </Card>
   <Card title="TypeScript" icon="js" href="https://github.com/i-am-bee/beeai-framework/tree/main/typescript/examples/serialization">
     Explore reference serialization implementations in TypeScript
+  </Card>
+  <Card title="Python" icon="python">
+    COMING SOON: Explore reference serialization implementations in Python
   </Card>
 </CardGroup>
