--- a/docs-mintlify/modules/agents.mdx
+++ b/docs-mintlify/modules/agents.mdx
@@ -96,11 +96,11 @@ def create_agent() -> ReActAgent:
 
     # Other models to try:
     # "llama3.1"
-    # "granite3.1-dense"
+    # "granite3.3"
     # "deepseek-r1"
     # ensure the model is pulled before running
     llm = ChatModel.from_name(
-        "ollama:granite3.1-dense:8b",
+        "ollama:granite3.3:8b",
         ChatModelParameters(temperature=0),
     )
 
@@ -203,7 +203,7 @@ const logger = new Logger({ name: "app", level: "trace" });
 
 // Other models to try:
 // "llama3.1:70b"
-// "granite3.1-dense"
+// "granite3.3"
 // "deepseek-r1:32b"
 // ensure the model is pulled before running
 const llm = new OllamaChatModel("llama3.1");
@@ -401,7 +401,7 @@ const logger = new Logger({ name: "app", level: "trace" });
 
 // Other models to try:
 // "llama3.1:70b"
-// "granite3.1-dense"
+// "granite3.3"
 // "deepseek-r1:32b"
 // ensure the model is pulled before running
 const llm = new OllamaChatModel("llama3.1");
@@ -566,7 +566,7 @@ class CustomAgent(BaseAgent[CustomAgentRunOutput]):
 
 async def main() -> None:
     agent = CustomAgent(
-        llm=OllamaChatModel("granite3.1-dense:8b"),
+        llm=OllamaChatModel("granite3.3:8b"),
         memory=UnconstrainedMemory(),
     )
 
@@ -689,7 +689,7 @@ export class CustomAgent extends BaseAgent<RunInput, RunOutput, RunOptions> {
 }
 
 const agent = new CustomAgent({
-  llm: new OllamaChatModel("granite3.1-dense"),
+  llm: new OllamaChatModel("granite3.3"),
   memory: new UnconstrainedMemory(),
 });
 
@@ -883,7 +883,7 @@ memory = UnconstrainedMemory()
 
 
 def create_agent() -> ReActAgent:
-    llm = ChatModel.from_name("ollama:granite3.1-dense:8b")
+    llm = ChatModel.from_name("ollama:granite3.3:8b")
 
     # Initialize the agent
     agent = ReActAgent(llm=llm, memory=memory, tools=[])
