--- a/docs-mintlify/modules/memory.mdx
+++ b/docs-mintlify/modules/memory.mdx
@@ -211,7 +211,7 @@ memory = UnconstrainedMemory()
 
 
 def create_agent() -> ReActAgent:
-    llm = ChatModel.from_name("ollama:granite3.1-dense:8b")
+    llm = ChatModel.from_name("ollama:granite3.3:8b")
 
     # Initialize the agent
     agent = ReActAgent(llm=llm, memory=memory, tools=[])
@@ -566,7 +566,7 @@ from beeai_framework.memory import SummarizeMemory
 async def main() -> None:
     # Initialize the LLM with parameters
     llm = ChatModel.from_name(
-        "ollama:granite3.1-dense:8b",
+        "ollama:granite3.3:8b",
         # ChatModelParameters(temperature=0),
     )
 
