--- a/python/examples/notebooks/basics.ipynb
+++ b/python/examples/notebooks/basics.ipynb
@@ -170,7 +170,7 @@
     "\n",
     "In this section, we will use the IBM `Granite 3.1 8B` language model via the Ollama provider.\n",
     "\n",
-    "If you haven't set up Ollama yet, follow the [guide on running Granite 3.1 using Ollama](https://www.ibm.com/granite/docs/run/granite-on-mac/granite/) for mac, or for other platforms use the [Ollama documentation](https://ollama.com) and [IBM Granite model page](https://ollama.com/library/granite3.1-dense:8b).\n",
+    "If you haven't set up Ollama yet, follow the [guide on running Granite 3.1 using Ollama](https://www.ibm.com/granite/docs/run/granite-on-mac/granite/) for mac, or for other platforms use the [Ollama documentation](https://ollama.com) and [IBM Granite model page](https://ollama.com/library/granite3.3:8b).\n",
     "\n",
     "⚡ If you would prefer to use watsonx then you should check out [watsonx.ipynb](watsonx.ipynb) and edit the following examples to use a watsonx ChatModel provider. ⚡\n",
     "\n",
@@ -214,8 +214,8 @@
    "source": [
     "from beeai_framework.backend import ChatModel, ChatModelOutput\n",
     "\n",
-    "# Create a ChatModel to interface with granite3.1-dense:8b on a local ollama\n",
-    "model = ChatModel.from_name(\"ollama:granite3.1-dense:8b\")\n",
+    "# Create a ChatModel to interface with granite3.3:8b on a local ollama\n",
+    "model = ChatModel.from_name(\"ollama:granite3.3:8b\")\n",
     "\n",
     "output: ChatModelOutput = await model.create(messages=[user_message])\n",
     "\n",
