--- a/python/examples/notebooks/workflows.ipynb
+++ b/python/examples/notebooks/workflows.ipynb
@@ -141,12 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a ChatModel to interface with granite3.1-dense:8b on a local ollama\n",
-    "model = ChatModel.from_name(\"ollama:granite3.1-dense:8b\")"
+    "# Create a ChatModel to interface with granite3.3:8b on a local ollama\n",
+    "model = ChatModel.from_name(\"ollama:granite3.3:8b\")"
    ]
   },
   {
