--- a/docs-mintlify/integrations/beeai-platform.mdx
+++ b/docs-mintlify/integrations/beeai-platform.mdx
@@ -210,7 +210,7 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	
 	
 	def main() -> None:
-	    llm = ChatModel.from_name("ollama:granite3.1-dense:8b")
+	    llm = ChatModel.from_name("ollama:granite3.3:8b")
 	    agent = ToolCallingAgent(llm=llm, tools=[DuckDuckGoSearchTool(), OpenMeteoTool()], memory=UnconstrainedMemory())
 	
 	    # Register the agent with the Beeai platform and run the HTTP server
