--- a/docs-mintlify/python/modules/tools.mdx
+++ b/docs-mintlify/python/modules/tools.mdx
@@ -69,6 +69,7 @@ import sys
 from datetime import date
 
 from beeai_framework.errors import FrameworkError
+from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
 from beeai_framework.tools.weather import OpenMeteoTool, OpenMeteoToolInput
 
 
@@ -76,7 +77,7 @@ async def main() -> None:
     tool = OpenMeteoTool()
     result = await tool.run(
         input=OpenMeteoToolInput(location_name="New York", start_date=date(2025, 1, 1), end_date=date(2025, 2, 1))
-    )
+    ).middleware(GlobalTrajectoryMiddleware())
     print(result.get_text_content())
 
 
