--- a/docs-mintlify/python/modules/workflows.mdx
+++ b/docs-mintlify/python/modules/workflows.mdx
@@ -315,11 +315,11 @@ async def main() -> None:
                     AgentWorkflowInput(prompt="Provide a short history of the location.", context=prompt),
                     AgentWorkflowInput(
                         prompt="Provide a comprehensive weather summary for the location today.",
-                        expected_output="Essential weather details such as chance of rain, temperature and wind. Only report information that is available.",  # noqa: E501
+                        expected_output="Essential weather details such as chance of rain, temperature and wind. Only report information that is available.",
                     ),
                     AgentWorkflowInput(
                         prompt="Summarize the historical and weather data for the location.",
-                        expected_output="A paragraph that describes the history of the location, followed by the current weather conditions.",  # noqa: E501
+                        expected_output="A paragraph that describes the history of the location, followed by the current weather conditions.",
                     ),
                 ]
             )
