--- a/docs-mintlify/experimental/requirement-agent.mdx
+++ b/docs-mintlify/experimental/requirement-agent.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Requirement Agent (experimental)"
-icon: "robot"
+title: "Requirement Agent"
+icon: "microscope"
 ---
 
 <Note>
-This is an experimental feature and will evolve based on community feedback.
+This is an **experimental** feature and will evolve based on community feedback.
 </Note>
 
 
